package de.dhbw.units.alu.subunit;

import de.dhbw.utils.data.Word;

public class OperatorResult {
    private Word result;

    public OperatorResult(Word result) {
        this.result = result;
    }

    public Word getResult() {
        return result;
    }
}
